
$Id: changes.txt,v 1.122 2007/03/09 17:25:57 vvd0 Exp $

MVDSV v0.26 build 2666 (2007.04.09)
MVDSV v0.25.20-CVS build 26?? (2007.0?.??)
----
* qqshka <qqshka@users.sourceforge.net>
- changed QVM API version to 12, G_FINDRADIUS worked now and also added G_MAKEVECTORS,
  both actually coded by SD-Angel, also i've add G_NEXTCLIENT which is similar to G_NEXTENT
  but G_NEXTCLIENT just help me walk over spawned clients fast
- changed QVM API version to 11 due to i've add G_CMD_TOKENIZE, g_strlcpy, g_strlcat

* VVD <vvd0@users.sourceforge.net>
- returned back md4 instead mdfour
- default value for sv_demofps increased from 20 to 30
- bugfix from 0.19.20-develop: pause with sv_minping > 0 cause server inaccessible -
  bug in ZQuake's minping ported by disconnect (Tonik, disconnect, hello :-))
- changed internal 'cmd dl -N' - download the Nth to last demo from demodir - work like before
  changes in 0.21
- increased maximum of fps in qwdtools from 100 to 1000

* disconnect <disconn3ct@users.sourceforge.net>
- changed behavior of server while loading corrupted maps: load previous map instead SV_Error
  (quit with error)
- qtv was updated to version v1
- new cvar qtv_password - password for connecting to qtv
- renamed cvars mvd_streamport and mvd_maxstreams to qtv_streamport and qtv_maxstreams
- Z_EXT_JOIN_OBSERVE protocol extensions (ported from ZQuake)
- remove function SV_Check_ktpro. Use qbool is_ktpro instead

* Tonik <tonik@users.sourceforge.net>
- add QSG extension framework. MVDSV starts up in QSG mode unless KTPro is detected or sv_ktpro_mode is enabled
- add ZQ_CLIENTCOMMAND, ZQ_PAUSE, ZQ_QC_STRINGS, DP_QC_CVAR_STRING, DP_QC_RANDOMVEC, DP_QC_TRACEBOX
- Remove "msg" and "rate", useless user commands
- Fixes join/observe problems
- NetQuake-like PM_NudgePosition() (English: don't get stuck on hip2m5)
- 'sv_cheats' cvar and 'devmap' command. Cheats can now be toggled without restarting the server
- add MSVC 2005 project files


MVDSV v0.25 build 2500 (2006.10.25)